# cansado-bot

./: .gitignore  Cargo.toml  LICENSE  NOTES.md  README.md  example.env
src/: example.state.json  main.rs
src/broadcast/: mod.rs
src/common/: mod.rs
src/common/helpers/: mod.rs
src/common/types/: mod.rs
src/services/: mod.rs
src/services/commands/: mod.rs
src/services/twitch/: irc.rs
src/state/: mod.rs
src/twitch/: irc.rs  mod.rs
src/types/: mod.rs
