[package]
name = "cansado-bot"
version = "0.1.0"
authors = ["Davi Busanello <itsme@davibusanello.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.8"
twitch-irc = "0.3.0"
tokio = { version = "0.3.4", features = ["rt-multi-thread"] }
serde = "1.0.117"
serde_yaml = "0.8.14"
