[package]
name = "cansado-bot"
version = "0.1.0"
authors = ["Davi Busanello <itsme@davibusanello.net>"]
edition = "2018"
rust = "1.49"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.8"
twitch-irc = "2.2"
tokio = { version = "1.2", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.14"
serde_json = "1.0"
dotenv = "0.15"
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
